Add DocumentParty class to represent financial document parties with identification, contact info, and financial settings